# perennia-files

./: README.md  pyproject.toml
perennia_files/: __init__.py  config.py  db.py  exceptions.py  files.py  models.py  repositories.py  schema.sql
perennia_files/ai/: __init__.py  extraction.py  generation.py  interface.py  local_provider.py  ocr.py  question_answering.py  summarisation.py
perennia_files/security/: checksum.py  encryption.py  validation.py
perennia_files/storage/: local.py
tests/: conftest.py  test_security.py  test_storage.py  test_validation.py
