[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perennia-files"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "PyMySQL>=1.1,<2",
    "cryptography>=42,<44",
]

[project.optional-dependencies]
ai = [
    "pypdf>=4,<6",
    "python-docx>=1,<2",
]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["perennia_files*"]

[tool.setuptools.package-data]
perennia_files = ["schema.sql"]
